<resources>
    <string name="app_name">Speed Test</string>
    <string name="speed_test_header"><u>Speed Test</u></string>
    <string name="internet_not_connected">Internet not connected</string>
    <string name="submit">Submit</string>
    <string name="refresh">Refresh</string>
    <string name="download_speed">Download Speed</string>
    <string name="upload_speed">Upload Speed</string>
    <string name="search">Search</string>
    <string name="no_record_found">No Record found</string>
    <string name="mobile_no">Mobile no</string>
    <string name="show_all_result">Show All result</string>
</resources>