<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SpeedTest">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/speed_test_header"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/textColor"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/internetStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/internet_not_connected"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/textColor"
        android:visibility="gone" />

    <com.github.anastr.speedviewlib.SpeedView
        android:id="@+id/speedViewIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:sv_markColor="@android:color/holo_green_dark"
        app:sv_maxSpeed="512"
        app:sv_speedTextColor="@color/textColor"
        app:sv_textColor="@color/textColor"
        app:sv_tickNumber="5"
        app:sv_tickRotation="false"
        app:sv_unit=""
        app:sv_unitTextColor="@color/textColor"
        app:sv_withTremble="false" />

    <TextView
        android:id="@+id/ConnectionType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:textColor="@color/textColor" />

    <LinearLayout
        android:id="@+id/llShowSpeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:padding="10dp"
            app:cardBackgroundColor="?android:attr/colorPrimary"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_1_gradient"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/download"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/textColor"
                    android:textStyle="italic|bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="@string/download_speed"
                    android:textAppearance="?android:textAppearance"
                    android:textColor="@color/textColor" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:padding="10dp"
            app:cardBackgroundColor="?android:attr/colorPrimary"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_2_gradient"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/textColor"
                    android:textStyle="italic|bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="@string/upload_speed"
                    android:textAppearance="?android:textAppearance"
                    android:textColor="@color/textColor" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/avg_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:textColor="@color/textColor" />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="10dp"
            android:onClick="checkNetwork"
            android:text="@string/refresh"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            tools:ignore="ButtonStyle,UsingOnClickInXml" />

        <Button
            android:id="@+id/btnTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="10dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>