<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SearchResult">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent">

            <EditText
                android:id="@+id/mobileEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/mobile_no"
                android:background="@android:color/transparent"
                android:hint="@string/mobile_no"
                android:inputType="phone"
                android:maxLength="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/search"
            android:onClick="print"
            android:src="@android:drawable/ic_menu_search"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/showAllCB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/show_all_result"
        android:textAppearance="?android:textAppearance" />

    <TextView
        android:id="@+id/nrf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/no_record_found"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/textColor"
        android:visibility="gone" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:visibility="gone"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="10dp"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/textColor"
                android:textStyle="italic|bold" />

            <TextView
                android:id="@+id/upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="10dp"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/textColor"
                android:textStyle="italic|bold" />

            <TextView
                android:id="@+id/timeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="10dp"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/textColor"
                android:textStyle="italic|bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/showResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />
</LinearLayout>